--- a/src/views/ProductDetailVul/VulDrawerComponent.css
+++ b/src/views/ProductDetailVul/VulDrawerComponent.css
@@ -5,7 +5,7 @@
       background-color: #fff;
   }
   
-.open_vulnerabilities .cvesearchright-inner{background: #fff;padding: 15px;box-shadow: 0 0 0 1px rgba(63,63,68,0.05), 0 1px 2px 0 rgba(63,63,68,0.15);}
+.open_vulnerabilities .cvesearchright-inner{background: #fff;padding: 15px;}
 .open_vulnerabilities .cvesearchtopheader{background: #fff;padding: 15px;box-shadow: 0 0 0 1px rgba(63,63,68,0.05), 0 1px 2px 0 rgba(63,63,68,0.15);}
 
 .open_vulnerabilities .cvesearchright {    
@@ -27,8 +27,8 @@ height:100%}
 .open_vulnerabilities .cvesearchright-inner > div:last-child .boxdetailhead{border:0px; }
 .open_vulnerabilities  .boxdetailhead{padding-bottom: 30px;margin-bottom: 0px;border-bottom:1px solid #e6e9ef;}
 .open_vulnerabilities  .boxdetailtitle{background: none;}
-.open_vulnerabilities  .boxdetailtitle h2{font-size: 16px;text-align: left;color: #333;margin-bottom: 05px;}
-.open_vulnerabilities  .boxtitlecontent{border:1px solid #e6e9ef;border-radius: 10px; }
+.open_vulnerabilities  .boxdetailtitle h2{font-size: 16px;text-align: left;color: #333;margin-bottom: 05px;font-weight: 600;}
+.open_vulnerabilities  .boxtitlecontent{border:1px solid #b7c3d0;border-radius: 10px; }
 .open_vulnerabilities  .meterright{text-align: right;}
 .open_vulnerabilities .boxdetailhead .boxtitlecontent .meter{margin-bottom: 0;}
 .open_vulnerabilities  .meter .meterleft{align-self: center;}
@@ -40,7 +40,7 @@ height:100%}
 
 
 .open_vulnerabilities .cvesearchright-inner .boxtitlecontent > div{padding:10px 15px;margin-bottom: 15px;}
-.open_vulnerabilities .cvesearchright-inner .boxtitlecontent > div.scoreblock-div{border-bottom: 1px solid #dde4ee;}
+/*.open_vulnerabilities .cvesearchright-inner .boxtitlecontent > div.scoreblock-div{border-bottom: 1px solid #dde4ee;}*/
 .open_vulnerabilities .scoreblock-div{display: flex;}
 .open_vulnerabilities .scoreblock {padding:0 5px;}
 .open_vulnerabilities .scoreblock-inner{display: table;width: 100%;height: 45px;border-radius: 5px;background: #fff;  }
@@ -54,11 +54,11 @@ height:100%}
 .open_vulnerabilities .boxtitlecontent .insightlist .MuiListItem-gutters{padding: 0px 0 15px 0;}
 .open_vulnerabilities .boxtitlecontent .insightlist .MuiListItem-gutters:last-child{padding-bottom: 0;}
 .open_vulnerabilities .boxtitlecontent .insightlist .MuiListItem-gutters .MuiSvgIcon-root{color: #333;}
-.open_vulnerabilities .insightlist .MuiTypography-displayBlock{font-size: 17px;color: #333;font-weight: 600;}
+.open_vulnerabilities .insightlist .MuiTypography-displayBlock{font-size: 12px;color: #333;font-weight: 400;}
 
 .open_vulnerabilities .loading-cell{padding: 10px;}
 .open_vulnerabilities .boxtitlecontent .snapshotlist .MuiListItem-gutters{padding: 0px 0 5px 0;;}
-.open_vulnerabilities .snapshotlist .MuiTypography-root > div{width: 50%;font-size: 17px; color: #333;font-weight: 600;display: inline-block;vertical-align: top;}
+.open_vulnerabilities .snapshotlist .MuiTypography-root > div{width: 100%;font-size: 14px; color: #333;font-weight: 500;display: inline-block;vertical-align: top;}
 
 
 .open_vulnerabilities .boxtitlecontent.explo-list{padding: 10px 15px;}
@@ -68,7 +68,7 @@ height:100%}
 	background-color: #027ae2;
 	color: #fff;
 }
-.open_vulnerabilities .cvesearchcenter .MuiTypography-h6{font-size: 13px;}
+.open_vulnerabilities .cvesearchcenter .MuiTypography-h6{font-size: 14px;}
 .open_vulnerabilities .cvesearchcenter .MuiTableRow-root {
 	cursor: pointer;
 }
@@ -81,7 +81,12 @@ width:100% !important;
 
 
 .open_vulnerabilities .niahinsightlist span {
-	font-size: 17px;
+	font-size: 14px;
     color: #333;
-    font-weight: 600;
+    font-weight: 500;
+}
+
+
+.MuiButton-label {
+  justify-content: center;
 }
