--- a/src/views/VuldbLogin/VuldbLogin.css
+++ b/src/views/VuldbLogin/VuldbLogin.css
@@ -330,3 +330,7 @@ width:100% !important;
 .vuldb-login .scoreblock-inner > div{font-size: 12px;}
 
 }
+
+.vulnerability {
+    padding-top: 10px;
+}
